Working WGPU UI and Input

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,12 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.79"
 console = "0.15.8"
-eframe = "0.25.0"
-egui = "0.25.0"
-egui_winit_platform = "0.20.0"
 portable-pty = "0.8.1"
 winit = "0.29.10"
+winit_input_helper = "0.15.3"
+rusttype = "0.9.0"
+glyph_brush = "0.7.8"
+wgpu_text = "0.8.6"
+wgpu = "0.19.1"
+env_logger = "0.11.1"
+pollster = "0.3.0"
