--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ pollster = "0.3.0"
 termwiz = "0.22.0"
 cosmic-text = "0.11.2"
 colored = "2.1.0"
+dioxus = "0.4.3"
+dioxus-desktop = "0.4.3"
+web-sys = "0.3.68"
