--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,8 @@ portable-pty = "0.8.1"
 termwiz = "0.22.0"
 dioxus = { version = "0.5.0-alpha", features = ["desktop", "html", "hooks"] }
 tokio = "1.36.0"
-web-sys = {version =  "0.3.68", features = ["ResizeObserver", "ResizeObserverEntry"] }
+web-sys = {version =  "0.3.68", features = ["ResizeObserver", "ResizeObserverEntry", "Element"] }
 futures = "0.3.30"
+serde-wasm-bindgen = "0.6.4"
+serde = { version = "1.0.197", features = ["serde_derive"] }
+serde_json = "1.0.114"
