--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ futures = "0.3.30"
 serde-wasm-bindgen = "0.6.4"
 serde = { version = "1.0.197", features = ["serde_derive"] }
 serde_json = "1.0.114"
+async-channel = "2.2.0"
