--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ serde-wasm-bindgen = "0.6.4"
 serde = { version = "1.0.197", features = ["serde_derive"] }
 serde_json = "1.0.114"
 async-channel = "2.2.0"
+async-option = "0.1.1"
