--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ serde = { version = "1.0.197", features = ["serde_derive"] }
 serde_json = "1.0.114"
 async-channel = "2.2.0"
 async-option = "0.1.1"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
