--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ async-channel = "2.2.0"
 async-option = "0.1.1"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
+notify-rust = "4.10.0"
