--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 anyhow = "1.0.79"
 portable-pty = "0.8.1"
 termwiz = "0.22.0"
-dioxus = { version = "0.5.0-alpha.2", features = ["desktop", "html", "hooks"] }
+dioxus = { version = "0.5.0", features = ["desktop", "html", "hooks"] }
 tokio = "1.36.0"
 web-sys = {version =  "0.3.68", features = ["ResizeObserver", "ResizeObserverEntry", "Element"] }
 futures = "0.3.30"
