--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [workspace]
-members = ["gui", "term", "hooks"]
+members = ["gui", "term", "hooks", "config_watcher"]
 resolver = "2"
 
 [workspace.dependencies]
 hooks = { path = "./hooks" }
 term = { path = "./term" }
 gui = { path = "./gui" }
-
+config_watcher = { path = "./config_watcher" }
