--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["gui", "term", "hooks"]
+members = ["gui", "term", "hooks", "actions"]
 resolver = "2"
 
 [workspace.dependencies]
