--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -23,3 +23,4 @@ pretty_term = { workspace = true }
 pretty_hooks = { workspace = true }
 anyhow = { workspace = true }
 dioxus = { workspace = true }
+async-channel = { workspace = true }
