--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -26,5 +26,6 @@ log = "0.4.21"
 
 term = { workspace = true }
 hooks = { workspace = true }
+config = { workspace = true }
 num-traits = "0.2.18"
 proc-macro2 = "=1.0.79"
