feat: keybind deserialization

--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 toml = "0.8.13"
 serde = "1.0"
 dirs = "5.0.1"
+dioxus = { version = "0.5.0", features = ["serde", "html", "hooks"] }
+enum_derive = "0.1.7"
