--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-termwiz = "0.22.0"
 futures = "0.3.30"
 serde-wasm-bindgen = "0.6.4"
 serde = { version = "1.0.197", features = ["serde_derive"] }
@@ -18,6 +17,7 @@ proc-macro2 = "=1.0.79"
 global-hotkey = "0.5.0"
 
 fern = { workspace = true }
+termwiz = { workspace = true }
 log = { workspace = true }
 pretty_term = { workspace = true }
 pretty_hooks = { workspace = true }
