--- a/term/Cargo.toml
+++ b/term/Cargo.toml
@@ -5,9 +5,9 @@ edition = "2021"
 
 [dependencies]
 portable-pty = "0.8.1"
-termwiz = "0.22.0"
 tokio = "1.36.0"
 async-channel = "2.2.0"
 num-traits = "0.2.18"
+termwiz = { workspace = true }
 log = { workspace = true }
 anyhow = { workspace = true }
