--- a/hooks/Cargo.toml
+++ b/hooks/Cargo.toml
@@ -8,3 +8,4 @@ anyhow = { workspace = true }
 dioxus = { workspace = true }
 serde = { version = "1.0.197", features = ["serde_derive"] }
 serde_json = "1.0.114"
+log = { workspace = true }
