--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -9,3 +9,5 @@ serde = "1.0"
 dirs = "5.0.1"
 dioxus = { version = "0.5.0", features = ["serde", "html", "hooks"] }
 enum_derive = "0.1.7"
+strum_macros = "0.26.4"
+strum = "0.26.3"
