--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -11,3 +11,4 @@ dioxus = { version = "0.5.0", features = ["serde", "html", "hooks"] }
 enum_derive = "0.1.7"
 strum_macros = "0.26.4"
 strum = "0.26.3"
+confy = "0.6.1"
