--- a/form/Cargo.toml
+++ b/form/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0.197", features = ["serde_derive"] }
 dioxus = { workspace = true }
+serde_json = "1.0.120"
