--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["gui", "term", "hooks", "config", "form"]
+members = ["gui", "term", "hooks", "config"]
 resolver = "2"
 
 [workspace.dependencies]
@@ -7,7 +7,7 @@ config = { path = "./config" }
 pretty_hooks = { path = "./hooks" }
 pretty_term = { path = "./term" }
 prettyterm_gui = { path = "./gui" }
-dioxus_form = { path = "./form" }
+dioxus-form = { path = "../form" }
 
 anyhow = "1.0.79"
 dioxus = { version = "0.5.0", features = ["desktop", "html", "hooks"] }
