--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ config = { path = "./config" }
 pretty_hooks = { path = "./hooks" }
 pretty_term = { path = "./term" }
 prettyterm_gui = { path = "./gui" }
-dioxus-form = { path = "../form" }
+dioxus-form = "0.1.0"
 
 anyhow = "1.0.79"
 dioxus = { version = "0.5.1", features = ["desktop", "html", "hooks"] }
