--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-toml = "0.8.13"
+toml = { version = "0.8.19", features = ["preserve_order"] }
 serde = "1.0"
 dirs = "5.0.1"
 dioxus = { version = "0.5.0", features = ["serde", "html", "hooks"] }
