--- a/plugins/glassy/plugin.toml
+++ b/plugins/glassy/plugin.toml
@@ -5,4 +5,4 @@ git_repo = "rhaskia/PreTTYExamplePlugin"
 js_files = []
 css_files = ["style.css"]
 palette_files = ["glassy.toml"]
-desc = ""
+desc = "An example plugin"
