--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -6,9 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-futures = "0.3.30"
 serde-wasm-bindgen = "0.6.4"
-serde = { version = "1.0.197", features = ["serde_derive"] }
 serde_json = "1.0.114"
 notify-rust = "4.10.0"
 manganis = "0.2.1"
@@ -16,6 +14,8 @@ num-traits = "0.2.18"
 strum = "0.26.3"
 markdown = "0.3.0"
 
+futures = { workspace = true }
+serde = { workspace = true }
 config = { workspace = true }
 fern = { workspace = true }
 termwiz = { workspace = true }
