--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -8,14 +8,15 @@ edition = "2021"
 [dependencies]
 futures = "0.3.30"
 serde-wasm-bindgen = "0.6.4"
-serde = { version = "1.0.197", features = ["serde_derive"] }
+serde = { version = "1.0.217", features = ["serde_derive"] }
 serde_json = "1.0.114"
 notify-rust = "4.10.0"
-manganis = "0.2.1"
+manganis = "0.6"
 num-traits = "0.2.18"
 strum = "0.26.3"
 markdown = "0.3.0"
 
+tokio = { workspace = true }
 config = { workspace = true }
 fern = { workspace = true }
 termwiz = { workspace = true }
@@ -24,5 +25,7 @@ pretty_term = { workspace = true }
 pretty_hooks = { workspace = true }
 anyhow = { workspace = true }
 dioxus = { workspace = true }
+dioxus-document = { workspace = true }
 async-channel = { workspace = true }
 dioxus-form = { workspace = true }
+#dioxus-native = { git="https://github.com/DioxusLabs/blitz.git" }
