--- a/hooks/Cargo.toml
+++ b/hooks/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 anyhow = { workspace = true }
 dioxus = { workspace = true }
-serde = { version = "1.0.197", features = ["serde_derive"] }
+dioxus-document = { workspace = true }
+serde = { workspace = true }
 serde_json = "1.0.114"
 log = { workspace = true }
+tokio = { workspace = true }
