--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -16,4 +16,7 @@ strum = "0.26.3"
 confy = "0.6.1"
 reqwest = "0.12.7"
 markdown = "0.3.0"
+keyboard-types = { version = "0.7", features = ["serde"] }
+
+[target.'cfg(not(target_family = "wasm"))'.dependencies]
 gix = "0.66.0"
